Fix an alignment issue with the load save dialog bottom bar actions

--- a/src/css/apps/user/filemanager/bottom.css
+++ b/src/css/apps/user/filemanager/bottom.css
@@ -40,6 +40,10 @@
   gap: 10px;
 }
 
+#fileManager > div.body div.bottom.save div.actions {
+  margin-left: auto;
+}
+
 #fileManager > div.body div.bottom div.notice {
   height: 30px;
   padding: 0 10px;
